--- a/templates/Str_To_Morse_Converter.html
+++ b/templates/Str_To_Morse_Converter.html
@@ -1,5 +1,5 @@
 {% include "header.html" %}
-<body style="text-align: center;">
+<body class="str_to_morce">
     <h2 class="str_to_morce_heading"> String to Morce Code Converter</h2>
     <div class="coll">
         <form method="POST">
