--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
 </head>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-lg p-3 mb-5 bg-body rounded">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-lg  p-3 mb-3  rounded opacity-100">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                 Projects
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="/Str-To-Morce-Converter">Str to Morce converter</a></li>
+                <li><a class="dropdown-item" href="/Str-To-Morse-Converter">Str to Morse converter</a></li>
                 <li><a class="dropdown-item" href="">Another action</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
