--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% include "header.html" %}
 <body>
-    <div  class="welcome-page">
+    <div style="background-image: url(static/img/bgimg2.png);"  class="welcome-page">
 
         <main role="main" class="inner cover">
-            <h1 class="cover-heading">Welcome on my portfolio website</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <h1 class="cover-heading">Hi there!</h1>
+            <p class="lead">I'm Rolson.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+              <a href="#" class="btn  btn-outline-secondary">Learn more</a>
             </p>
           </main>
     </div>
